--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <script src="/tarteaucitron/tarteaucitron.js"></script>
+        <script type="text/javascript">
+            tarteaucitron.init({
+              "privacyUrl": "", /* Privacy policy url */
+              "bodyPosition": "bottom", /* or top to bring it as first element for accessibility */
+    
+              "hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
+              "cookieName": "tarteaucitron", /* Cookie name */
+        
+              "orientation": "middle", /* Banner position (top - bottom) */
+           
+              "groupServices": false, /* Group services by category */
+              "serviceDefaultState": "wait", /* Default state (true - wait - false) */
+                               
+              "showAlertSmall": false, /* Show the small banner on bottom right */
+              "cookieslist": false, /* Show the cookie list */
+                               
+              "closePopup": false, /* Show a close X on the banner */
+    
+              "showIcon": true, /* Show cookie icon to manage cookies */
+              //"iconSrc": "", /* Optionnal: URL or base64 encoded image */
+              "iconPosition": "BottomRight", /* BottomRight, BottomLeft, TopRight and TopLeft */
+    
+              "adblocker": false, /* Show a Warning if an adblocker is detected */
+                               
+              "DenyAllCta" : true, /* Show the deny all button */
+              "AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
+              "highPrivacy": true, /* HIGHLY RECOMMANDED Disable auto consent */
+                               
+              "handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
+    
+              "removeCredit": false, /* Remove credit link */
+              "moreInfoLink": true, /* Show more info link */
+    
+              "useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
+              "useExternalJs": false, /* If false, the tarteaucitron.js file will be loaded */
+    
+              //"cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for multisite */
+                              
+              "readmoreLink": "", /* Change the default readmore link */
+    
+              "mandatory": true, /* Show a message about mandatory cookies */
+              "mandatoryCta": true /* Show the disabled accept button when mandatory on */
+            });
+            </script>
+        {# version avec inscription et payement #}
+        {# <script src="https://tarteaucitron.io/load.js?domain=127.0.0.1%2Fsession&uuid=daf144c9bc05780c9795c92d794cc241b7da33fb"></script>        <meta charset="UTF-8"> #}
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" integrity="sha256-5veQuRbWaECuYxwap/IOE/DAwNxgm4ikX7nrgsqYp88=" crossorigin="anonymous">
         {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-        <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+        <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href='fullcalendar/main.css' rel='stylesheet' />
         {% endblock %}
     </head>
     <body>
@@ -20,44 +68,68 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse " id="navbarColor02">
-                        <ul class="navbar-nav me-auto ">
-                            {# <li class="nav-item">
+                    <div class="dropdown col-5">
+                        {% if app.user %}
+                        <button class="btn btn-secondary dropdown-toggle fs-4 col-6" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Listes de choix
+                        </button>
+                        {% endif %}
+                        <ul class="dropdown-menu col-6 " aria-labelledby="dropdownMenuButton1">
+                            <li class="nav-item">
                                 <a class="nav-link active fs-4" href="{{ path('app_home')}}">Acceuil<span class="visually-hidden">(current)</span></a> 
-                            </li> #}
-                            <li class="nav-item">
-                                <a class="nav-link fs-4" href="{{ path('app_category')}}  ">Liste Catégories</a>
                             </li>
-                            {% if is_granted('ROLE_ADMIN') %}
+                            {% if is_granted('ROLE_SECRETAIRE') %}
                             <li class="nav-item">
-                                <a class="nav-link fs-4" href="{{ path('app_workshop')}}">Liste Modules</a>
+                                <a class="nav-link fs-4" href="{{ path('app_category')}}  ">Gestion et liste Catégories</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link fs-4" href="{{ path('app_workshop')}}">Gestion et liste Modules</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link fs-4" href="{{ path('app_formation')}}">Gestion et liste Formations</a>
                             </li>
                             {% endif %}
-                            <li class="nav-item">
-                                <a class="nav-link fs-4" href="{{ path('app_formation')}}">Liste Formations</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link fs-4" href="{{ path('app_session')}}">Liste Session</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link fs-4" href="{{ path('app_intern')}}">Liste Stagiaires</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-4" href="{{ path('app_calendar_index')}}">Calendar</a>
+                            </li>
                         </ul>
-                    </div>
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if app.user %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register')}}">Crée un compte</a>
-                        </li>
-                        {% endif %}
-                    </ul>
+                      </div> 
+                      <div class="collapse navbar-collapse col-4" id="navbarColor02">
+                            <ul class="navbar-nav me-auto ">
+                            {% if app.user %}                     
+                                <li class="nav-item">
+                                    <a class="nav-link fs-4" href="{{ path('app_message' , {'id': app.user.id } ) }} ">Fil d'actualité (échange)</a> 
+                                </li>      
+                                <li class="nav-item">
+                                    <a class="nav-link fs-4" href="{{ path('app_messageMail')}}">Messagerie</a>   
+                                </li> 
+                                {% endif %}                   
+                        </ul>
+                        </div>
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
+                            </li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_register')}}">Crée un compte</a>
+                            </li>
+                            {% endif %}
+                        </ul>
                 </div>
             </nav>
         </header>
@@ -65,21 +137,21 @@
             {% for message in app.flashes('success') %}
             <div class="alert alert-success">
                 {{ message }}
-                </div>
+            </div>
             {% endfor %}
 
             {# Afficher les messages d'erreur #} 
             {% for message in app.flashes('error') %}
             <div class="alert alert-error">
                 {{ message }}
-                </div>
+            </div>
             {% endfor %}
 
             {# Afficher les messages de warning #} 
             {% for message in app.flashes('warning') %}
             <div class="alert alert-warning">
                 {{ message }}
-                </div>
+            </div>
             {% endfor %}
         {% block body %}
         {% endblock %}
@@ -102,9 +174,12 @@
             </div>
         </footer>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js" integrity="sha256-7PzqE1MyWa/IV5vZumk1CVO6OQbaJE4ns7vmxuUP/7g=" crossorigin="anonymous"></script>
     {% block javascripts %}
-    {# <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> #}
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src='fullcalendar/main.js'></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
       $(document).ready( function () {
@@ -113,8 +188,22 @@
       $('#table_id3').DataTable( { "language": { url: 'https://cdn.datatables.net/plug-ins/1.12.1/i18n/fr-FR.json' } });
       });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="{{ asset('js/script.js') }})></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+        function onSubmit(token) {
+            document.getElementById("demo-form").submit();
+        }
+    </script>
+
+    <script src="{{ asset('js/script.js') }}"> </script>
+    <script src="{{ asset('js/gsf.js') }}"> </script>
+ 
+        <script type="text/javascript">
+            tarteaucitron.user.recaptchaapi = 'XXXXX';
+            (tarteaucitron.job = tarteaucitron.job || []).push('recaptcha');
+        </script>
+        <script src='https://www.google.com/recaptcha/api.js?render=XXXXX'></script>
     {% endblock %}
 </html>
