--- a/templates/intern/detail.html.twig
+++ b/templates/intern/detail.html.twig
@@ -26,6 +26,7 @@
         </div>    
     </div>
 </div>
+{# <button type="button" class="btn btn-lg bg-secondary mt-2 "><a href="{{ path('pdf_intern', {'id': intern.id }) }}">pdf Stagiaires</a></button> #}
 
 
 {% endblock %}
