--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,11 +9,13 @@
     <h1 class="text-center mt-5 mb-5">Bienvenue {{app.user.pseudo}}</h1>
     {% else %}
     <h1 class="text-center mt-5 mb-5">Bienvenue sur la page d'accueil</h1>
+    <h2 class="text-center mt-5 mb-5">Veuillez vous connecter pour acceder au fonctionnalité du site !!!</h2>
+
     {% endif %}
+    {% if app.user %}
     <div class="row">
         <div class="col">
             <h2 class="text-center mt-5 mb-5"> Sessions déjà effectuer </h2>
-            
             <table id="table_id" class="table table-striped mt-4 display">
                 <thead>
                 <tr class="bg-secondary">
@@ -88,6 +90,7 @@
             </table>
         </div>
     </div>
+    {% endif %}
 </div>
 {% endblock %}
 
