--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,20 +24,27 @@
             <label for="inputPassword">Password</label>
             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
             </div>
+            <div class="g-recaptcha" data-sitkey="6LeevY0hAAAAAIUmuqtPT1ma_-XfjUEITnQQlu42"></div>
+            {# ici on place cet div pour avoir le recaptcha dans le login  #}
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+   
+            {# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html #}
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-    <div class="col-4 mb-4 mt-4">
-        <button class="btn btn-lg btn-primary" type="submit">Connexion</button>
-    </div>
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
+            <div class="row">
+                <div class="col-4 mb-4 mt-4">
+                    <a class="" href="{{ path('app_forgot_password_request') }}">forgot password ?</a>
+                </div>
+            </div>
+            <div class="col-4 mb-4 mt-4">
+            <button class="btn btn-lg btn-primary" type="submit">Connexion</button>
+            </div>
+        </div>    
+    </div>        
 </form>
 {% endblock %}
