--- a/templates/session/add.html.twig
+++ b/templates/session/add.html.twig
@@ -3,26 +3,76 @@
 {% block title %}Ajout Stagiaire{% endblock %}
 
 {% block body %}
-        <h1 class="text-center">Ajout session </h1>
-    {{ form_start(formAddSession) }}
-    {{ form_errors(formAddSession) }}
+{% if add == "add" %}
+{% else %}
+<div class="container fs-3 text-center">
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center">Ajout session </h1>
+            <p>Nom de la formation : {{session.formation.entitled}}</p>
+            <p >date du <strong>{{session.dateStart | date('d/m/Y') ~" au "~ session.dateEnd | date('d/m/Y')}}</strong> : {{session.dateDays}}</p>
+            <p>En tout la formation comporte(s) : {{ session.programs | length }} modules dans la formation</p>
+            <p> En tout la formation compte(s) : {{ session.totalDaysFormation }} jours de formation pour {{session.totalDaysSession}} jours alloués </p>
+        </div>
+    </div>
+</div>
+{% endif %}
+       
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
         <div class="container">
             <div class="row">
                 <div class="col-5 mb-4 mt-4">
-                    {{ form_row(formAddSession.dateStart) }}
+                    {{ form_row(form.title) }}
                 </div>
                 <div class="col-5 mb-4 mt-4">
-                    {{ form_row(formAddSession.dateEnd) }}
+                    {{ form_row(form.dateStart) }}
+                </div>
+                <div class="col-5 mb-4 mt-4">
+                    {{ form_row(form.dateEnd) }}
                 </div>
                 <div class="col-2 mb-4 mt-4">
-                    {{ form_row(formAddSession.nbPlace) }}
+                    {{ form_row(form.nbPlace) }}
                 </div>
+                <h2>Programme de la session </h2>
+                <div class="col-6 mb-4 mt-4">
+                    {# on va construire dynamiquement la liste des modules existants à partire de Programme #}
+                    <div class="form-group row ">
+                        <div class="col-form-label col-sm-2">&nbsp;</div>
+                        <div id="programme-fields-list" class="col-sm-10 remove-collection-widget"
+                            data-prototype="{{ form_widget(form.programs.vars.prototype)|e }}"
+                            data-session="{{sessionId}}"
+                            data-widget-tags="{{ '<p></p>'|e }}"
+                            data-widget-counter="{{ form.programs|length }}">
+                        {% for programmeField in form.programs %}
+                            <p>
+                                {{ form_errors(programmeField) }}
+                                {{ form_widget(programmeField, {'attr': {'class': 'borders'}}) }}
+                            </p>
+                        {% endfor %}
+                        </div>
+                    </div>
+                    <div class="form-group row flex-action">
+                        <button type="button"
+                                class="add-another-collection-widget button"
+                                data-list-selector="#programme-fields-list">Ajouter un nouveau module
+                        </button>
+                    </div>
+                    <div class="borders"></div>
+                    {# empêche l'apparition d'une légende "programmes", si la collection est vide (en cas de création d'une nouvelle session) #}
+                    {% do form.programs.setRendered %}
+                </div>
+                    
+                {# {% if  session.totalDaysFormation  > session.totalDaysSession  %} 
+                <p class="text-center" style="color:red";> VOUS AVEZ TROP DE JOUR DE FORMATION ALLOUER En tout la formation compte(s) : {{ session.totalDaysFormation }} jours de formation pour {{session.totalDaysSession}} jours alloués </p>
+                {% else %} #}
                 <div class="row">
                     <div class="col-4 mt-4">   
-                        {{ form_row(formAddSession.submit, { 'label': 'Envoyer' }) }}
+                        {{ form_row(form.submit, { 'label': 'Envoyer' }) }}
                     </div>
                 </div>     
+                {# {% endif %} #}
             </div>   
         </div> 
-     {{ form_end(formAddSession) }}
+     {{ form_end(form) }}
 {% endblock %}
